// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field.Integer for Resource.Form Empty 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field has-numberinput has-numberinput-compact"
    style="width: inherit;"
  >
    <!---->
     
    <div
      class="b-numberinput field has-addons is-expanded"
    >
      <p
        class="control"
      >
        <button
          class="button is-primary"
          type="button"
        >
          <span
            class="icon"
          >
            <i
              class="fa fa-minus fa-lg"
            />
          </span>
        </button>
      </p>
       
      <div
        class="control is-expanded is-clearfix"
      >
        <input
          autocomplete="on"
          class="input"
          step="1"
          type="number"
        />
         
        <!---->
         
        <!---->
         
        <!---->
      </div>
       
      <p
        class="control"
      >
        <button
          class="button is-primary"
          type="button"
        >
          <span
            class="icon"
          >
            <i
              class="fa fa-plus fa-lg"
            />
          </span>
        </button>
      </p>
    </div>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Integer for Resource.Form With value, label, icon and placeholder 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field has-numberinput has-numberinput-compact"
    style="width: inherit;"
  >
    <label
      class="label"
    >
      My field label
    </label>
     
    <div
      class="b-numberinput field has-addons is-expanded"
    >
      <p
        class="control"
      >
        <button
          class="button is-primary"
          type="button"
        >
          <span
            class="icon"
          >
            <i
              class="fa fa-minus fa-lg"
            />
          </span>
        </button>
      </p>
       
      <div
        class="control has-icons-left is-expanded is-clearfix"
      >
        <input
          autocomplete="on"
          class="input"
          max="20"
          min="5"
          placeholder="An explicit placeholder"
          step="1"
          type="number"
        />
         
        <span
          class="icon is-left"
        >
          <i
            class="fa fa-user fa-lg"
          />
        </span>
         
        <!---->
         
        <!---->
      </div>
       
      <p
        class="control"
      >
        <button
          class="button is-primary"
          type="button"
        >
          <span
            class="icon"
          >
            <i
              class="fa fa-plus fa-lg"
            />
          </span>
        </button>
      </p>
    </div>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Integer for Resource.Form With value, label, readonly 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <label
      class="label"
    >
      My field label
    </label>
     
    <span>
      15
    </span>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Integer for Resource.List Empty 1`] = `
<div>
  <span>
    
  </span>
</div>
`;

exports[`Field.Integer for Resource.List With value 1`] = `
<div>
  <span>
    10
  </span>
</div>
`;
